--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
     "path": "^0.12.7",
     "uuid": "^10.0.0"
